Fixed target screen size on mobile version.

--- a/css/styles.css
+++ b/css/styles.css
@@ -198,14 +198,14 @@ hr {
 }
 
 /* Changes in website style on screens of size 600px or smaller (Tablet) */
-@media (max-width: 600px) {
+/*@media (max-width: 600px) {
   .skill-row {
     margin: 80px auto 130px;
   }
-}
+}*/
 
-/* Changes in website style on screens of size 400px or smaller (Mobile) */
-@media (max-width: 400px) {
+/* Changes in website style on screens of size 600px or smaller (Mobile) */
+@media (max-width: 600px) {
   #header {
     font-size: 3.125rem;
   }
@@ -239,7 +239,7 @@ hr {
     margin-bottom: 0;
     padding-bottom: 0;
   }
-  
+
   .footer-link {
     font-size: 20px;
     margin-right: 15px;
